Add Elasticsearch MCP Server via Supergateway Deployment

--- a/deploy/helm/rag-ui/charts/llama-stack/values.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/values.yaml
@@ -167,3 +167,7 @@ mcp-servers:
   weather:
     enabled: true
     uri: http://mcp-servers-weather:8000/sse
+  elasticsearch:
+    enabled: true
+    uri: http://supergateway-service:8000/sse
+    
